feat[controller] add produto paginado